# Oxta-Mem

./: .gitignore  Dockerfile  LICENSE  NEXT_STEPS_REPORT.md  README.md  ROADMAP.md  docker-compose.yml  oxta_mem.py  pyproject.toml  requirements.txt
docs/: SCIENTIFIC_PROOF.md  SIMULATION_RESULTS.txt
docs/tla/: GeodesicMemory.tla
nn/: causal_maze.py  dataset.npz  train_simple.py
oxta_engine/: Cargo.toml  build_python.sh
oxta_engine/python/: geodesic_sdk.py  langchain_retriever.py
oxta_engine/src/: engine.rs  lib.rs  main.rs  server.rs  sharding.rs
python/oxta_mem/: __init__.py  langchain.py  sdk.py
simulation/: entropy_sim.py
