[package]
name = "oxta_mem"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
memmap2 = "0.9.9"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rkyv = "0.8.14"
tokio = { version = "1.49.0", features = ["full"] }
usearch = "2.23.0"
